--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <header>
-        <nav class="menu">
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Renata Fücher</h1>
-        <h2 class="site-subtitle">Terapeuta Ocupacional</h2>
-      </header>
-</body>
-</html>
+<header>
+  <nav class="menu">
+    <ul>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Portfólio</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+  </nav>
+  <h1 class="site-title">Renata Fücher</h1>
+  <h2 class="site-subtitle">Terapeuta Ocupacional</h2>
+</header>
+<section>
+<h2>Portfólio</h2>
+<figure>
+<img class="img-portfolio" src="./imagens/atividades cognitivas.jpg" alt="Estimulação Cognitiva">
+<figcaption>Estimulação Cognitiva</figcaption>
+</figure>
+<figure>
+<img class="img-portfolio" src="./imagens/mão.jpg" alt=">Reabilitação Física">
+<figcaption>Reabilitação Física</figcaption>
+</figure>
+<figure>
+<img class="img-portfolio" src="./imagens/ABVD.jpg" alt="Treino de ABVD">
+<figcaption>Treino de ABVD</figcaption>
+</figure>
+<figure>
+<img class="img-portfolio" src="./imagens/aula.png" alt="Palestras e Aulas">
+<figcaption>Palestras e Aulas</figcaption>
+</figure>
+</section>
